--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
             <button class="mobile-menu-toggle" id="mobile-menu-toggle" aria-label="Toggle mobile menu">
                 ☰
             </button>
-            <span class="navbar__title">Prasara</span>
+            <div class="brand"> 
+                <img class="imagelogo" src="/Images/Prasara Logo.png">
+                <span class="navbar__title">Prasara</span>
+            </div>
+            
             <div class="navbar__links" id="navbar-links">
                 <a href="#services" class="navbar__link">Services</a>
                 <a href="#about" class="navbar__link">About</a>
