--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <div class="container">
         <!-- Brand moved to top left -->
         <div class="brand"> 
-            <img class="imagelogo" src="/images/Prasara Logo.png">
+            <img class="imagelogo" src="/Images/Prasara Logo.png">
             <span class="navbar__title">Prasara</span>
         </div>
 
