--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prasara Home</title>
     <link id="theme-stylesheet" rel="stylesheet" href="style-light.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
     <style>
         body {
             transition: background 0.4s ease, color 0.4s ease;
@@ -57,27 +60,293 @@
         .icon-moon {
             background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="%23cbd5e1" viewBox="0 0 24 24"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg>') no-repeat center/cover;
         }
+
+        /* Brand positioning */
+        .brand {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            z-index: 1001;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        /* Theme toggle floating positioning */
+        .theme-toggle-floating {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            z-index: 1001;
+            background: rgba(244, 241, 234, 0.9);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border-radius: 50%;
+            padding: 15px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            transition: all 0.3s ease;
+        }
+
+        .theme-toggle-floating:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 25px rgba(0, 0, 0, 0.15);
+        }
+
+        /* Dark theme adjustments for floating elements */
+        .prasara-body.dark .theme-toggle-floating {
+            background: rgba(40, 40, 40, 0.9);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Mobile hamburger toggle styles */
+        .mobile-nav-toggle {
+            display: none;
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1002;
+            background: rgba(244, 241, 234, 0.9);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border: none;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            cursor: pointer;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 4px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            transition: all 0.3s ease;
+        }
+
+        .mobile-nav-toggle:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 25px rgba(0, 0, 0, 0.15);
+        }
+
+        .hamburger-line {
+            width: 20px;
+            height: 2px;
+            background: #2b2b27;
+            transition: all 0.3s ease;
+            border-radius: 1px;
+        }
+
+        .mobile-nav-toggle.active .hamburger-line:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+
+        .mobile-nav-toggle.active .hamburger-line:nth-child(2) {
+            opacity: 0;
+        }
+
+        .mobile-nav-toggle.active .hamburger-line:nth-child(3) {
+            transform: rotate(-45deg) translate(7px, -6px);
+        }
+
+        /* Dark theme adjustments for mobile toggle */
+        .prasara-body.dark .mobile-nav-toggle {
+            background: rgba(40, 40, 40, 0.9);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        .prasara-body.dark .hamburger-line {
+            background: #cbd5e1;
+        }
+
+        /* --- UPDATED MOBILE MENU STYLES START --- */
+        .mobile-nav-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(10, 10, 10, 0.5);
+            /* Darker, less opaque background */
+            backdrop-filter: blur(15px);
+            /* Increased blur effect */
+            -webkit-backdrop-filter: blur(15px);
+            z-index: 1001;
+            opacity: 0;
+            visibility: hidden;
+            /* Use visibility for transitions */
+            pointer-events: none;
+            /* Prevent clicks when hidden */
+            transition: opacity 0.4s ease, visibility 0.4s;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .mobile-nav-overlay.active {
+            opacity: 1;
+            visibility: visible;
+            pointer-events: auto;
+            /* Allow clicks when visible */
+        }
+
+        .mobile-nav-content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 25px;
+            /* Adjusted gap for a cleaner look */
+        }
+
+        .mobile-nav-link {
+            color: #f4f1ea;
+            text-decoration: none;
+            font-size: 2rem;
+            font-weight: 500;
+            /* Slightly lighter font weight */
+            padding: 15px 30px;
+            border-radius: 12px;
+            /* A more modern, subtle border-radius */
+            background: rgba(255, 255, 255, 0.05);
+            /* More transparent background */
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            min-width: 250px;
+            /* Wider links for easier tapping */
+            text-align: center;
+            opacity: 0;
+            /* Initially hidden for animation */
+            transform: translateY(20px);
+            /* Initial position for animation */
+            transition: opacity 0.3s ease, transform 0.3s ease, background 0.2s ease;
+        }
+
+        .mobile-nav-overlay.active .mobile-nav-link {
+            opacity: 1;
+            transform: translateY(0);
+            /* Final position */
+        }
+
+        /* Staggered animation for each link */
+        .mobile-nav-overlay.active .mobile-nav-link:nth-child(1) {
+            transition-delay: 0.1s;
+        }
+
+        .mobile-nav-overlay.active .mobile-nav-link:nth-child(2) {
+            transition-delay: 0.2s;
+        }
+
+        .mobile-nav-overlay.active .mobile-nav-link:nth-child(3) {
+            transition-delay: 0.3s;
+        }
+
+        .mobile-nav-overlay.active .mobile-nav-link:nth-child(4) {
+            transition-delay: 0.4s;
+        }
+
+        .mobile-nav-link:hover,
+        .mobile-nav-link:focus {
+            background: rgba(255, 255, 255, 0.15);
+            /* Brighter background on hover */
+            border-color: rgba(255, 255, 255, 0.3);
+            transform: scale(1.03);
+            /* Subtle scale effect on hover */
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
+        }
+
+        /* --- UPDATED MOBILE MENU STYLES END --- */
+
+
+        /* Prevent body scroll when mobile menu is open */
+        .no-scroll {
+            overflow: hidden;
+        }
+
+        /* Mobile responsiveness for brand and theme toggle */
+        @media (max-width: 768px) {
+            .brand {
+                top: 15px;
+                left: 15px;
+            }
+
+            .theme-toggle-floating {
+                bottom: 20px;
+                right: 20px;
+                padding: 12px;
+            }
+
+            .mobile-nav-toggle {
+                display: flex;
+            }
+
+            .navbar {
+                display: none;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .brand {
+                top: 10px;
+                left: 10px;
+                position: absolute;
+            }
+
+            .theme-toggle-floating {
+                bottom: 15px;
+                right: 15px;
+                padding: 10px;
+            }
+
+            .mobile-nav-toggle {
+                top: 15px;
+                right: 15px;
+                width: 45px;
+                height: 45px;
+            }
+
+            .mobile-nav-link {
+                font-size: 1.5rem;
+                min-width: 180px;
+                padding: 12px 25px;
+            }
+        }
     </style>
 </head>
 
 <body class="prasara-body">
     <div class="container">
-        <div class="navbar" id="navbar">
-
-            <button class="mobile-menu-toggle" id="mobile-menu-toggle" aria-label="Toggle mobile menu">
-                ☰
-            </button>
+        <div class="brand">
+            <img class="imagelogo" src="Images/Prasara Logo.png">
             <span class="navbar__title">Prasara</span>
+        </div>
+
+        <div class="mobile-nav-toggle" id="mobile-nav-toggle">
+            <span class="hamburger-line"></span>
+            <span class="hamburger-line"></span>
+            <span class="hamburger-line"></span>
+        </div>
+
+        <div class="theme-toggle-floating">
+            <button class="theme-toggle" id="theme-toggle-btn" title="Toggle dark/light mode">
+                <span id="theme-icon" class="icon-moon"></span>
+            </button>
+        </div>
+
+        <div class="navbar" id="navbar">
             <div class="navbar__links" id="navbar-links">
                 <a href="#services" class="navbar__link">Services</a>
                 <a href="#about" class="navbar__link">About</a>
                 <a href="#contact" class="navbar__link">Contact</a>
                 <a href="#kickstart" class="navbar__link">Kickstart AI</a>
             </div>
-            <div class="custom">
-                <button class="theme-toggle" id="theme-toggle-btn" title="Toggle dark/light mode">
-                    <span id="theme-icon" class="icon-moon"></span>
-                </button>
+        </div>
+
+        <div class="mobile-nav-overlay" id="mobile-nav-overlay">
+            <div class="mobile-nav-content">
+                <a href="#services" class="mobile-nav-link">Services</a>
+                <a href="#about" class="mobile-nav-link">About</a>
+                <a href="#contact" class="mobile-nav-link">Contact</a>
+                <a href="#kickstart" class="mobile-nav-link">Kickstart AI</a>
             </div>
         </div>
         <div class="hero" id="home">
@@ -251,7 +520,7 @@
             <p class="kickstart-subtitle">Not sure where to start? Tell us about your business. Our free AI will provide
                 an initial analysis and suggest how Prasara can help you grow.</p>
 
-            <form class="kickstart-form">
+            <form class="kickstart-form" id="kickstart-form">
                 <label for="biz-name">Business Name</label>
                 <input type="text" id="biz-name" placeholder="e.g., Kerala Spice Emporium" required>
 
@@ -267,7 +536,9 @@
                 <label for="goals">Marketing Goals</label>
                 <textarea id="goals" placeholder="What do you want to achieve with marketing?" required></textarea>
 
-                <button type="submit" class="kickstart-submit">Kickstart My Brand</button>
+                <button type="submit" class="kickstart-submit" id="kickstart-submit-btn">Kickstart My Brand</button>
+
+                <div id="kickstart-form-status"></div>
             </form>
         </div>
 
@@ -310,7 +581,6 @@
 
                 <div class="socials" aria-label="Social links">
                     <a class="social-btn" href="#" aria-label="Instagram">
-                        <!-- keep using your svg markup; this uses currentColor so it adapts -->
                         <svg width="26" height="26" viewBox="0 0 16 16" fill="currentColor"
                             xmlns="http://www.w3.org/2000/svg">[...]</svg>
                     </a>
@@ -332,8 +602,74 @@
         </footer>
 
     </div>
+
     <script>
+        // --- MAIN DOM CONTENT LOADED LISTENER ---
         document.addEventListener('DOMContentLoaded', function () {
+
+            // --- 1. KICKSTART FORM HANDLER ---
+            const kickstartForm = document.getElementById('kickstart-form');
+            const submitButton = document.getElementById('kickstart-submit-btn');
+            const formStatus = document.getElementById('kickstart-form-status');
+
+            // This is your backend URL
+            // For local testing: 'http://localhost:3001'
+            // For deployment: 'https://your-app-name.onrender.com'
+            const backendApiUrl = 'http://localhost:3001/api/kickstart-submit';
+
+            if (kickstartForm) { // Check if the form exists before adding listener
+                kickstartForm.addEventListener('submit', async function (event) {
+                    event.preventDefault(); // Stop the page from reloading
+
+                    const formData = {
+                        "biz-name": document.getElementById('biz-name').value,
+                        "biz-desc": document.getElementById('biz-desc').value,
+                        "audience": document.getElementById('audience').value,
+                        "services": document.getElementById('services').value,
+                        "goals": document.getElementById('goals').value
+                    };
+
+                    // Show loading message and reset classes
+                    formStatus.textContent = 'Analyzing...';
+                    formStatus.classList.remove('form-status-success', 'form-status-error');
+                    submitButton.disabled = true;
+
+                    try {
+                        // Send data to your backend
+                        const response = await fetch(backendApiUrl, {
+                            method: 'POST',
+                            headers: { 'Content-Type': 'application/json' },
+                            body: JSON.stringify(formData)
+                        });
+
+                        const result = await response.json();
+
+                        if (response.ok) {
+                            // --- THIS IS THE FIX ---
+                            const n8nMessage = result.n8nResponse || 'Analysis complete!';
+
+                            // Use marked.parse() to convert Markdown to HTML
+                            formStatus.innerHTML = marked.parse(n8nMessage);
+                            // Add success class (CSS will handle the color)
+                            formStatus.classList.add('form-status-success');
+                        } else {
+                            // Handle errors from the backend
+                            formStatus.textContent = result.message || 'An error occurred. Please try again.';
+                            formStatus.classList.add('form-status-error'); // Add error class
+                        }
+                    } catch (error) {
+                        // Handle network errors (backend is down)
+                        formStatus.textContent = 'Could not connect to the server. Please check your connection.';
+                        formStatus.classList.add('form-status-error'); // Add error class
+                        console.error('Fetch error:', error);
+                    } finally {
+                        // Re-enable the button
+                        submitButton.disabled = false;
+                    }
+                });
+            }
+
+            // --- 2. THEME AND MOBILE NAV HANDLERS ---
             const LIGHT_THEME = 'style-light.css';
             const DARK_THEME = 'style-dark.css';
             const themeStylesheet = document.getElementById('theme-stylesheet');
@@ -366,53 +702,55 @@
                 });
             }
 
-            const menuToggle = document.querySelector('.menu-toggle') || document.getElementById('mobile-menu-toggle');
-            const navUl = document.querySelector('.navbar ul') || document.getElementById('navbar-links');
+            const mobileNavToggle = document.getElementById('mobile-nav-toggle');
+            const mobileNavOverlay = document.getElementById('mobile-nav-overlay');
+            const navLinks = document.getElementById('navbar-links');
 
-            function closeMenu() {
-                if (menuToggle) {
-                    menuToggle.classList.remove('open');
-                    menuToggle.setAttribute('aria-expanded', 'false');
-                }
-                if (navUl) navUl.classList.remove('show');
+            function toggleMobileMenu() {
+                mobileNavToggle.classList.toggle('active');
+                mobileNavOverlay.classList.toggle('active');
+                document.body.classList.toggle('no-scroll');
             }
 
-            function openMenu() {
-                if (menuToggle) {
-                    menuToggle.classList.add('open');
-                    menuToggle.setAttribute('aria-expanded', 'true');
-                }
-                if (navUl) navUl.classList.add('show');
-            }
+            if (mobileNavToggle && mobileNavOverlay && navLinks) {
+                mobileNavToggle.addEventListener('click', toggleMobileMenu);
 
-            if (menuToggle && navUl) {
-                menuToggle.addEventListener('click', function (e) {
-                    e.stopPropagation();
-                    if (menuToggle.classList.contains('open')) closeMenu();
-                    else openMenu();
-                });
-
-                navUl.querySelectorAll('a').forEach(function (link) {
-                    link.addEventListener('click', function () {
-                        closeMenu();
-                    });
-                });
-
-                document.addEventListener('click', function (e) {
-                    if (!menuToggle.contains(e.target) && !navUl.contains(e.target)) {
-                        closeMenu();
+                mobileNavOverlay.addEventListener('click', function (e) {
+                    if (e.target === this) {
+                        toggleMobileMenu();
                     }
                 });
 
+                mobileNavOverlay.querySelectorAll('.mobile-nav-link').forEach(function (link) {
+                    link.addEventListener('click', function () {
+                        toggleMobileMenu();
+                    });
+                });
+
                 window.addEventListener('resize', function () {
-                    if (window.innerWidth > 768) closeMenu();
+                    if (window.innerWidth > 768) {
+                        mobileNavToggle.classList.remove('active');
+                        mobileNavOverlay.classList.remove('active');
+                        document.body.classList.remove('no-scroll');
+                    }
+                });
+            }
+
+            // New interactive background effect for dark mode
+            const body = document.querySelector('.prasara-body');
+            if (body) {
+                window.addEventListener('pointermove', (e) => {
+                    if (themeStylesheet.getAttribute('href').includes(DARK_THEME)) {
+                        const { clientX, clientY } = e;
+                        const x = Math.round((clientX / window.innerWidth) * 100);
+                        const y = Math.round((clientY / window.innerHeight) * 100);
+                        body.style.setProperty('--mouse-x', x);
+                        body.style.setProperty('--mouse-y', y);
+                    }
                 });
             }
         });
     </script>
-
-
-
 </body>
 
 </html>
