--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -61,15 +61,16 @@
             background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="%23cbd5e1" viewBox="0 0 24 24"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg>') no-repeat center/cover;
         }
 
-        /* Brand positioning */
+        /* Brand positioning - UPDATED */
         .brand {
-            position: fixed;
+            position: absolute; /* Changed from fixed */
             top: 20px;
             left: 20px;
             z-index: 1001;
             display: flex;
             align-items: center;
             gap: 10px;
+            margin-right: 8px; /* Added from collaborator */
         }
 
         /* Theme toggle floating positioning */
@@ -267,6 +268,7 @@
             .brand {
                 top: 15px;
                 left: 15px;
+                display: none; /* UPDATED */
             }
 
             .theme-toggle-floating {
@@ -281,6 +283,11 @@
 
             .navbar {
                 display: none;
+            }
+
+            /* NEW class from collaborator */
+            .space-bottom-ins{
+                margin-bottom: 5px !important;
             }
         }
 
@@ -310,34 +317,43 @@
                 padding: 12px 25px;
             }
         }
+
+        /* NEW rule from collaborator */
+        @media (min-width: 768px) and (max-width: 900px) {
+            .brand {
+                display: none;
+            }
+        }
     </style>
 </head>
 
 <body class="prasara-body">
     <div class="container">
-        <div class="brand">
-            <img class="imagelogo" src="Images/Prasara Logo.png">
-            <span class="navbar__title">Prasara</span>
-        </div>
+        <div class="overlappingEle">
+            <div class="brand">
+                <img class="imagelogo" src="Images/Prasara Logo.png">
+                <span class="navbar__title">Prasara</span>
+            </div>
 
-        <div class="mobile-nav-toggle" id="mobile-nav-toggle">
-            <span class="hamburger-line"></span>
-            <span class="hamburger-line"></span>
-            <span class="hamburger-line"></span>
-        </div>
+            <div class="mobile-nav-toggle" id="mobile-nav-toggle">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </div>
 
-        <div class="theme-toggle-floating">
-            <button class="theme-toggle" id="theme-toggle-btn" title="Toggle dark/light mode">
-                <span id="theme-icon" class="icon-moon"></span>
-            </button>
-        </div>
+            <div class="theme-toggle-floating">
+                <button class="theme-toggle" id="theme-toggle-btn" title="Toggle dark/light mode">
+                    <span id="theme-icon" class="icon-moon"></span>
+                </button>
+            </div>
 
-        <div class="navbar" id="navbar">
-            <div class="navbar__links" id="navbar-links">
-                <a href="#services" class="navbar__link">Services</a>
-                <a href="#about" class="navbar__link">About</a>
-                <a href="#contact" class="navbar__link">Contact</a>
-                <a href="#kickstart" class="navbar__link">Kickstart AI</a>
+            <div class="navbar" id="navbar">
+                <div class="navbar__links" id="navbar-links">
+                    <a href="#services" class="navbar__link">Services</a>
+                    <a href="#about" class="navbar__link">About</a>
+                    <a href="#contact" class="navbar__link">Contact</a>
+                    <a href="#kickstart" class="navbar__link">Kickstart AI</a>
+                </div>
             </div>
         </div>
 
@@ -502,14 +518,14 @@
             <div class="oc-content">
                 <div class="oc-content-left">
                     <h3>Partners in Your Journey</h3>
-                    <p>We're dedicated partners, invested in your brand's journey. <br> We don't just innovate; we
+                    <p class="space-bottom-ins">We're dedicated partners, invested in your brand's journey. <br> We don't just innovate; we
                         ignite
                         your brand's path, helping it <br> dance on the digital waves and uplift its entire presence.
                     </p>
                 </div>
                 <div class="oc-content-right">
                     <h3>Democratizing Technology</h3>
-                    <p>We focus on Kerala's under-served local businesses. We <br> democratize advanced tech, putting
+                    <p class="space-bottom-ins">We focus on Kerala's under-served local businesses. We <br> democratize advanced tech, putting
                         powerful tools into local <br> heroes' hands, building a vibrant, inclusive digital economy.</p>
                 </div>
             </div>
@@ -607,7 +623,7 @@
         // --- MAIN DOM CONTENT LOADED LISTENER ---
         document.addEventListener('DOMContentLoaded', function () {
 
-            // --- 1. KICKSTART FORM HANDLER ---
+            // --- 1. KICKSTART FORM HANDLER (KEPT) ---
             const kickstartForm = document.getElementById('kickstart-form');
             const submitButton = document.getElementById('kickstart-submit-btn');
             const formStatus = document.getElementById('kickstart-form-status');
@@ -669,7 +685,7 @@
                 });
             }
 
-            // --- 2. THEME AND MOBILE NAV HANDLERS ---
+            // --- 2. THEME AND MOBILE NAV HANDLERS (KEPT) ---
             const LIGHT_THEME = 'style-light.css';
             const DARK_THEME = 'style-dark.css';
             const themeStylesheet = document.getElementById('theme-stylesheet');
